RESOLVED FIXED143216
[GStreamer] More GL shared context fixes
https://bugs.webkit.org/show_bug.cgi?id=143216
Summary [GStreamer] More GL shared context fixes
Philippe Normand
Reported 2015-03-30 05:13:42 PDT
The patch from Bug 143049 has various incorrect changes.
Attachments
patch (4.82 KB, patch)
2015-03-30 05:20 PDT, Philippe Normand
cgarcia: review+
Philippe Normand
Comment 1 2015-03-30 05:20:36 PDT
Martin Robinson
Comment 2 2015-03-30 08:17:05 PDT
Comment on attachment 249721 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=249721&action=review Looks good apart from the a naming nit: > Source/WebCore/platform/graphics/glx/GLContextGLX.h:52 > + virtual bool isEGLCompliant() const { return false; } A context isn't really "EGL compliant" it's either an EGL context or something else. I recommend just calling this method "isEGLContext."
Philippe Normand
Comment 3 2015-03-30 08:23:23 PDT
Note You need to log in before you can comment on or make changes to this bug.