Source/WebCore/platform/graphics/egl/GLContextEGL.h
@@ -45,6 +45,7 @@ public:
 #if USE(CAIRO)
     virtual cairo_device_t* cairoDevice();
 #endif
+    virtual bool isEGLContext() const { return true; }
 
 #if USE(3D_GRAPHICS)
     virtual PlatformGraphicsContext3D platformContext();
